# 25fa-dsc180a-team1

./: .env.example  .gitignore  README.md  WIKI.md  notebook.ipynb  pixi.toml  pyproject.toml
assets/: wk2_presentation.md
logs/: .gitkeep
notebooks/: 1a.ipynb  1b.ipynb  1b_Full.ipynb  3a.ipynb  3b.ipynb  4.ipynb  basic_eda.ipynb  gloria_eda.ipynb  illness_score.ipynb  jason_test.ipynb  lca_clustering.R
notebooks/01_eda/: gloria_eda.ipynb  illness_score.ipynb
src/mathmatical_analysis/: config.py  lca_clustering.py  lca_model_fitting.R  lca_script.R
src/mimiciii_db/: README.md  __init__.py  config.py  db.py
src/mimiciii_db/queries/: README.md  __init__.py  elixhauser_quan.py  filtered_patients.py  filtered_patients_agegrouped_with_morbidities.py  filtered_patients_with_morbidity_counts.py  morbidity_counts.py  multimorbidity_by_age_bracket_1a.py
src/mimiciii_db/queries/illness_score_queries/: 01_echo_data.py  02_ventilation_classification.py  03_ventdurations.py  04_vital_first_day.py  05_uo_first_day.py  06_ventilation_first_day.py  07_gcs_first_day.py  08_lab_first_day.py  09_blood_gas_first_day.py  10_blood_gas_first_day_arterial.py  11_sofa.py  12_oasis.py  13_sapsii.py  README.md
src/new_scripts/: LCA_script.R  fig_2a_2b_script.R  fig_3a_script.R
src/visualizations/: config.py  network_viz.py  subgroup_multimorbidity_bubble.py  subgroup_network_viz.py
temp/: .gitkeep
tests/: README.md  test_basic_imports.py  test_db_functional.py
