[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimiciii-db"                 # distribution name (hyphens OK)
version = "0.1.0"
description = "Internal DB utilities"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mimiciii_db*"]           # ← three i’s